[package]
name = "netdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
atty = "0.2.14"
clap = { version = "3.2.20", features = ["derive"] }
dialoguer = { version = "0.10.2", features = ["history", "completion"] }
tokio = { version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11.11", default-features = false, features = [
  "rustls",
] }
serde_json = "1.0.85"
serde_yaml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }
http-serde = "2.0.0"
http = "1.0.0"
